# ai-friendly-tools

./: .dockerignore  .gitignore  AGENT_MD_IMPLEMENTATION_SUMMARY.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  MCP_TOOL_DISCOVERY_SUMMARY.md  NEW_CLI_COMMANDS.py  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md  README.md  SESSION_SUMMARY.md  SUMMARY.md  docker-compose.yml  main.py  pyproject.toml
.github/: AGENTS.md  copilot-instructions.md
.github/agents/: cli-specialist.agent.md  docker-specialist.agent.md  documentation-writer.agent.md  duckdb-expert.agent.md  python-expert.agent.md  testing-specialist.agent.md
.github/workflows/: ci.yml  codeql.yml  docker-release.yml
core/: README.md  pyproject.toml
core/src/core/: cli.py  config.py
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  DOCKER.md  DOCKER_RELEASE.md  INSTALLATION.md  MCP_MANAGER_EXPLAINED.md
example-tool/: pyproject.toml
example-tool/src/example_tool/: __init__.py
libs/aifts-core/: pyproject.toml
libs/aifts-core/src/aifts_core/: __init__.py  config.py
libs/aifts-mcp-manager/: README.md  pyproject.toml
libs/aifts-mcp-manager/src/aifts_mcp_manager/: __init__.py  cli.py  config.py
mcp-manager/: AGENT_MD_GENERATION.md  README.md  pyproject.toml
mcp-manager/examples/: generate_agent_md.py
mcp-manager/src/mcp_manager/: __init__.py  cli.py  client.py  config.py  database.py  gateway.py  health.py  registry.py  security.py  server.py
mcp-manager/src/mcp_manager/agent/: __init__.py  templates.py
mcp-manager/src/mcp_manager/ai/: __init__.py  embeddings.py  examples.py  llm_export.py  nlp.py  suggestions.py  workflows.py
mcp-manager/src/mcp_manager/discovery/: __init__.py  scanner.py
mcp-manager/src/mcp_manager/examples/: __init__.py  generator.py  templates.py
mcp-manager/src/mcp_manager/llm/: __init__.py  export.py  prompt_builder.py
mcp-manager/src/mcp_manager/nlp/: __init__.py  intent_matcher.py  query_parser.py
mcp-manager/src/mcp_manager/tools/: __init__.py  embeddings.py  execution.py  schema.py  search.py  validation.py  vector_store.py
mcp-manager/src/mcp_manager/workflows/: __init__.py  pipeline.py  recommender.py
mcp-manager/tests/: test_agent_markdown_generator.py  test_ai_features.py  test_tool_execution.py  test_workflows.py
memo/: pyproject.toml
src/aift/: __init__.py  cli.py  config.py  logging.py
tests/: README_TESTS.md  __init__.py  test_cli.py  test_config.py  test_exec_names.py  test_integration.py  test_mcp_integration.py  test_smoke.py  test_windows_paths.py  test_windows_paths2.py
web/: README.md  pyproject.toml
web/src/web/: __init__.py  autolearn.py  cache.py  cli.py  core.py  knowledge.py  sources.py  workflows.py
