[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[project]
name = "core"
version = "0.1.0"
description = "Core shared library for AI Friendly Tools"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "bjoernbethge"}]
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "typer>=0.21.1",
    "rich>=14.2.0",
    "loguru>=0.7.3",
    "psutil>=6.1.0",
]

[project.scripts]
aift = "core.cli:app"
