[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[project]
name = "mcp-manager"
version = "0.1.0"
description = "DuckDB MCP Manager CLI - mcp-man"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "bjoernbethge", email = "bjoern.bethge@gmail.com"}]
license = {text = "MIT"}
dependencies = [
    "core",
    "duckdb>=1.4.3",
    "rich>=14.2.0",
]

[project.scripts]
mcp-man = "mcp_manager.cli:main"

[tool.uv.sources]
core = { workspace = true }
