[project]
name = "web"
version = "0.1.0"
description = "Standalone web intelligence suite: DuckDuckGo search, HTML scraping, REST API calls"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "core",
    "ddgs>=9.10.0",
    "duckdb>=1.4.3",
]

[project.scripts]
web = "web.cli:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
core = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"
