[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aifts-core"
version = "0.1.0"
description = "Core shared library for AI Friendly Tools"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "bjoernbethge"}]
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]